executor-application/configs/src/main/resources/distr/openshift/router-executor-router-executor/ratelimit-ef.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: router-executor-router-executor-${distrib.release.version}
spec:
  workloadSelector:
    labels:
      platformv.sber.ru/config-fp-name: router-executor-router-executor
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.local_ratelimit
          typed_config:
            '@type': type.googleapis.com/udpa.type.v1.TypedStruct
            type_url: >-
              type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
            value:
              stat_prefix: http_local_rate_limiter
    - applyTo: HTTP_ROUTE
      match:
        context: SIDECAR_INBOUND
        routeConfiguration:
          vhost:
            name: inbound|http|8080
            route:
              action: ANY
      patch:
        operation: MERGE
        value:
          route:
            rate_limits:
              - actions:
                  - header_value_match:
                      descriptor_key: rate_limit_descriptor
                      descriptor_value: workflow_start_limit
                      expect_match: true
                      headers:
                        - name: ':path'
                          prefix_match: /dab2c-router-executor/v1/workflow-gate
                        - name: ':path'
                          safe_regex_match:
                            regex: .*\?.*cmd=START.*
              - actions:
                  - header_value_match:
                      descriptor_key: rate_limit_descriptor
                      descriptor_value: workflow_continue_limit
                      expect_match: true
                      headers:
                        - name: ':path'
                          prefix_match: /dab2c-router-executor/v1/workflow-gate
                        - name: ':path'
                          safe_regex_match:
                            regex: .*\?.*cmd=START.*
                          invert_match: true
              - actions:
                  - header_value_match:
                      descriptor_key: rate_limit_descriptor
                      descriptor_value: other_limit
                      expect_match: true
                      headers:
                        - name: ':path'
                          prefix_match: /dab2c-router-executor/v1
                        - name: ':path'
                          prefix_match: /dab2c-router-executor/v1/actuator
                          invert_match: true
                        - name: ':path'
                          prefix_match: /dab2c-router-executor/v1/healthcheck
                          invert_match: true
                        - name: ':path'
                          prefix_match: /dab2c-router-executor/v1/environment
                          invert_match: true
                        - name: ':path'
                          prefix_match: /dab2c-router-executor/v1/workflow-gate
                          invert_match: true
          typed_per_filter_config:
            envoy.filters.http.local_ratelimit:
              '@type': type.googleapis.com/udpa.type.v1.TypedStruct
              type_url: >-
                type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
              value:
                descriptors:
                  - entries:
                      - key: rate_limit_descriptor
                        value: workflow_start_limit
                    token_bucket:
                      fill_interval: ${router-executor-router-executor.ose.envoy_filter.local_rate_limit.value.token_bucket.workfow-start.fill_interval}
                      max_tokens: ${router-executor-router-executor.ose.envoy_filter.local_rate_limit.value.token_bucket.workfow-start.max_tokens}
                      tokens_per_fill: ${router-executor-router-executor.ose.envoy_filter.local_rate_limit.value.token_bucket.workfow-start.tokens_per_fill}
                  - entries:
                      - key: rate_limit_descriptor
                        value: workflow_continue_limit
                    token_bucket:
                      fill_interval: ${router-executor-router-executor.ose.envoy_filter.local_rate_limit.value.token_bucket.workfow-continue.fill_interval}
                      max_tokens: ${router-executor-router-executor.ose.envoy_filter.local_rate_limit.value.token_bucket.workfow-continue.max_tokens}
                      tokens_per_fill: ${router-executor-router-executor.ose.envoy_filter.local_rate_limit.value.token_bucket.workfow-continue.tokens_per_fill}
                  - entries:
                      - key: rate_limit_descriptor
                        value: other_limit
                    token_bucket:
                      fill_interval: ${router-executor-router-executor.ose.envoy_filter.local_rate_limit.value.token_bucket.other.fill_interval}
                      max_tokens: ${router-executor-router-executor.ose.envoy_filter.local_rate_limit.value.token_bucket.other.max_tokens}
                      tokens_per_fill: ${router-executor-router-executor.ose.envoy_filter.local_rate_limit.value.token_bucket.other.tokens_per_fill}
                filter_enabled:
                  default_value:
                    denominator: HUNDRED
                    numerator: 100
                  runtime_key: local_rate_limit_enabled
                filter_enforced:
                  default_value:
                    denominator: HUNDRED
                    numerator: 100
                  runtime_key: local_rate_limit_enforced
                stat_prefix: http_local_rate_limiter
                token_bucket:
                  fill_interval: ${router-executor-router-executor.ose.envoy_filter.local_rate_limit.value.token_bucket.overall.fill_interval}
                  max_tokens: ${router-executor-router-executor.ose.envoy_filter.local_rate_limit.value.token_bucket.overall.max_tokens}
                  tokens_per_fill: ${router-executor-router-executor.ose.envoy_filter.local_rate_limit.value.token_bucket.overall.tokens_per_fill}
